# RAG-Summary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/config/: mapping.json  prompts.yaml
app/data/: patient_submissions.py
app/dependencies/: core.py  database.py  security.py
app/models/: database.py  simplified_models.py
app/preprocessing/: submissions.py
app/routers/: patient_summary.py
app/schemas/: frameworks.py
app/services/: summary.py
